[package]
name = "autoupdate"
version = "1.0.0"
edition = "2024"

[dependencies]
urbxtract = { path="../core" }
chrono = "0.4.40"
reqwest = { version="0.12.12", features=["json"] }
semver = "1.0.26"
serde = { version="1.0.219", features=["derive"] }
serde_json = "1.0.140"
tokio = { version="1.44.0", features=["full"] }