[package]
name = "urbxtract"
version = "0.0.1"
edition = "2024"

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = { version="0.28.1", features=["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version="1.43.0", features=["full"] }
tokio-util = { version="0.7", features=["io-util"] }

[target.'cfg(not(windows))'.dependencies]
pcap = "2.2.0"

[target.'cfg(windows)'.dependencies]
pcap-parser = "0.16.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
]
